style: corrects selection of btn on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -173,6 +173,8 @@
   font-weight: var(--fw-sec);
 
   cursor: pointer;
+  user-select: none;
+  touch-action: none;
 }
 
 @media screen and (min-width: 800px) {
